bin/testsuite/tests/compiler/src/errors/compiler5546.swg
#global testerror "Err0661"

#test
{
    let a = 4
    let b = 2
    a = a -- b
}